# mkdocs-protobuf

./: .bumpversion.toml  .flake8  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: docs.yml  release.yml  tests.aml  tests.yml
docs/: architecture.md  changelog.md  cross-references.md  index.md  testing.md
docs/api/: index.md  test.md  user.md
docs/api/example/document/v1/: data.md  service.md
examples/: sample-auto-i18n-mkdocs.yml  sample-mkdocs.yml
mkdocs_protobuf_plugin/: __init__.py  converter.py  extractor.py  extractors.py  file_cache.py  i18n_support.py  import_resolver.py  plugin.py
mkdocs_protobuf_plugin/types/: enum_proto.py  extracted_infos.py  message.py  proto_types.py  service.py
proto/: test.proto  user.proto
proto/example/document/v1/: data.proto  service.proto
test/: README.md  __init__.py  test_api.py  test_file_cache.py  test_i18n.py  test_navigation.py  test_nested_structure.py  test_plugin.py  test_plugin_processing.py  test_setup.py
